--- a/public/productos.css
+++ b/public/productos.css
@@ -82,7 +82,7 @@ body::before {
 
 /* 🔹 Botón Agregar */
 .btn-agregar {
-  background-color: #d60000;
+  background-color: #09379b;
   color: white;
   border: none;
   padding: 8px 12px;
